--- a/index.html
+++ b/index.html
@@ -534,15 +534,15 @@
                         <img src="assets/certificates/google-digital.jpg" alt="Python Programming Certificate">
                     </div>
                     <div class="certificate-content">
-                        <h3 class="certificate-title">Python Programming</h3>
+                        <h3 class="certificate-title">Google Digital Marketing</h3>
                         <div class="certificate-meta">
                             <div class="certificate-issuer">
                                 <i class="fas fa-award"></i>
-                                Google Digital
+                                Google Digital Garage
                             </div>
                         </div>
                         <p class="certificate-description">
-                            Advanced Python Programming certification with focus on data structures, algorithms, and practical application development.
+                            Advanced Digital Marketing Certified Course with SEO management Skills.
                         </p>
                         <div class="certificate-actions">
                             <a href="#" class="certificate-btn view-btn">
