--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">
                         <i class="fas fa-moon"></i>
                     </button>
-                    <a href="https://www.linkedin.com/in/suryanshthakur" class="social-link" target="_blank" aria-label="LinkedIn">
+                    <a href="https://www.linkedin.com/in/" class="social-link" target="_blank" aria-label="LinkedIn">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a href="https://github.com/beingcrazyasalways" class="social-link" target="_blank" aria-label="GitHub">
